--- a/public/index.html
+++ b/public/index.html
@@ -3,63 +3,74 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WhatsApp Voice Bot</title>
-    <link rel="icon" type="image/png" sizes="512x512" href="img/favicon2.png">
+    <title>WhatsApp Bot Dashboard</title>
+    <link rel="stylesheet" href="stylew.css">
     <script src="/socket.io/socket.io.js"></script>
-    <link rel="stylesheet" href="styles.css">
+    <script defer src="scriptw.js"></script>
 </head>
 <body>
-    
-    <div class="header">
-        <h2>WhatsApp Voice Bot</h2>
-        <button id="logout-btn" onclick="logoutUser()">Logout</button>
-    </div>
     <div class="container">
-        <div id="qr-container">
-            <h2>Connect to WhatsApp</h2>
-            <p>Scan this QR Code to connect:</p>
-            <img id="qr-code" src="" alt="QR Code">
+        <h1>📲 WhatsApp Bot Dashboard</h1>
+
+        <!-- QR Code Display -->
+        <div id="qr-section">
+            <h2>🔐 Scan QR Code</h2>
+            <img id="qr-code" src="" alt="QR Code will appear here">
+            <p id="status">Waiting for QR Code...</p>
         </div>
 
-        <div id="message-section">
-            <h2>Send a Message</h2>
+        <!-- Send Message -->
+        <div id="send-section">
+            <h2>💬 Send Messages</h2>
 
-            <div class="input-group">
-                <label>Country Code:</label>
-                <select id="country-code">
-                    <option value="+91" selected>🇮🇳 India (+91)</option>
-                    <option value="+1">🇺🇸 USA (+1)</option>
-                    <option value="+44">🇬🇧 UK (+44)</option>
-                    <option value="+971">🇦🇪 UAE (+971)</option>
-                    <option value="custom">Other (Enter manually)</option>
-                </select>
-                <input type="text" id="custom-country-code" placeholder="Enter country code">
-            </div>
+            <!-- Country Code Selection -->
+            <label for="country-code">📞 Select Country Code:</label>
+            <select id="country-code">
+                <option value="+91" selected>🇮🇳 India (+91)</option>
+                <option value="+1">🇺🇸 USA (+1)</option>
+                <option value="+44">🇬🇧 UK (+44)</option>
+                <option value="+61">🇦🇺 Australia (+61)</option>
+                <option value="+971">🇦🇪 UAE (+971)</option>
+            </select>
 
-            <div class="input-group">
-                <label>Phone Number:</label>
-                <input type="text" id="phone-number" placeholder="Enter phone number (without +)">
-            </div>
+            <!-- Enter Numbers Manually -->
+            <input type="text" id="numbers" placeholder="Enter numbers (comma separated)">
+            
+            <!-- OR Select Contact -->
+            <button onclick="fetchContacts()">📂 Fetch Contacts</button>
+            <select id="contacts-list">
+                <option value="">Select a Contact</option>
+            </select>
 
-            <div class="input-group">
-                <label>Message:</label>
-                <input type="text" id="message-text" placeholder="Enter your message">
-            </div>
+            <textarea id="message" placeholder="Enter your message"></textarea>
+            <input type="number" id="delay" placeholder="Delay (ms)">
+            <button onclick="sendMessage()">📤 Send</button>
+        </div>
 
-            <button id="voice-btn">🎤 Speak</button>
-            <button onclick="sendMessage()">🚀 Send Message</button>
-            <p id="status"></p>
+        <!-- Send to Group -->
+        <div id="group-section">
+            <h2>👥 Send to Group</h2>
+            <input type="text" id="group-name" placeholder="Enter Exact Group Name (Case-Sensitive)">
+            <textarea id="group-message" placeholder="Enter your message"></textarea>
+            <button onclick="sendToGroup()">📤 Send to Group</button>
+        </div>
 
-            <h2>WhatsApp Contacts</h2>
-            <button id="fetch-contacts-btn">📋 Fetch Contacts</button>
-            <div id="contacts"></div>
+        <!-- Send Media -->
+        <div id="media-section">
+            <h2>📎 Send Media</h2>
+            <input type="text" id="media-number" placeholder="Enter number">
+            <input type="file" id="file-input"> <!-- ✅ Fixed File Input -->
+            <input type="text" id="caption" placeholder="Enter Caption (optional)">
+            <button onclick="sendMedia()">📤 Send Media</button>
         </div>
     </div>
 
-    <footer>
-        <p>📌 Developed by Sameer | <span id="year"></span></p>
-    </footer>
-
-    <script src="script.js"></script>
+    <script>
+        // ✅ Automatically load & save last-used country code
+        document.getElementById("country-code").value = localStorage.getItem("countryCode") || "+91";
+        document.getElementById("country-code").addEventListener("change", (event) => {
+            localStorage.setItem("countryCode", event.target.value);
+        });
+    </script>
 </body>
 </html>
